package pt.ipp.isep.dei.project.reader;

public interface Reader {
    Object readFile(String path);
}
