@startuml

title US015 \n As an Administrator, I want to import geographical areas and sensors from a JSON file.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor ivory
skinparam FontName verdana
skinparam titleFontSize 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor ivory
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class ReaderController
class ReaderXML
class Reader
class HouseConfigurationUI
class ReaderJSONGeographicAreas
class GeographicAreaList
class GeographicArea
class Sensor
class InputHelperUI

MainUI -- HouseConfigurationUI : >
HouseConfigurationUI -- InputHelperUI : >
InputHelperUI -- ReaderController : >
ReaderController -- Sensor : >
ReaderController -- GeographicArea : >
ReaderController -- GeographicAreaList : >
ReaderController -- ReaderXML : >
ReaderController -- ReaderJSONGeographicAreas : >
ReaderXML ..|> Reader
ReaderJSONGeographicAreas ..|> Reader

class HouseConfigurationUI {
runUS15v2(GeographicAreaList);
}

class ReaderJSONGeographicAreas {
readFile(String filePath);
}

class ReaderController {
readJSONFileAndAddGeoAreas(String, GeographicAreaList);
addGeoAreasToList(GeographicAreaDTO[], GeographicAreaList);
readGeoAreasJSON(JSONArray);
readAreaSensorsJSON(JSONArray);
readFileXMLAndAddAreas(String, GeographicAreaList);
readGeographicAreasXML(Node);
readSensorsXML(Node);
getTagValue(String, Element);
}

class Reader{
readFile(String filePath);
}

class GeographicAreaList{
add();
}

class InputHelperUI{
getInputPathJsonOrXML(String, GeographicAreaList)
}

class ReaderXML{
readFile(String filePath);
}

@enduml